# racoon-coding-challage

./: .env.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.py
mic_racoon_challange/: app.py  dicom_handlers.py  helpers.py
tests/: test_main.py
ui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.vue
ui/src/assets/: main.css
ui/src/components/: FileUpload.vue  UploadFileItem.vue
ui/src/router/: index.ts
ui/src/views/: HomeView.vue  UploadTSView.vue
